aligned the image wrapper correctly

--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -10,7 +10,7 @@
     Main Styles
 ------------------------ */
 body {
-  background-color: azure;
+  background-color: beige;
 }
 
 .portfolio-wrapper {
@@ -62,7 +62,8 @@ a {
 .image-wrapper {
   width: 80%;
   margin-top: 3em;
-  background-color: cornflowerblue;
+  margin-right: 2%;
+  background-color: lightgrey;
   box-shadow: 2px 2px 8px rgba(0,0,0,.4);
 }
 
@@ -113,7 +114,7 @@ h2 {
 
 .portfolio-piece img {
   width: 100%;
-  box-shadow: 1px 2px 5px rgba(0,0,0,.4);
+  box-shadow: 2px 4px 8px rgba(0,0,0,.6);
 }
 
 .contact {
